--- a/exercises/02/style.css
+++ b/exercises/02/style.css
@@ -49,7 +49,7 @@ main {
   background-color: #f6dee1;
   padding: 40px;
   border-radius: 15px;
-  border-bottom: 5px solid #bfa5a9;  /* effetto rilievo con border */
+  border-bottom: 5px solid #bfa5a9;  
   border-right: 5px solid #bfa5a9;
   font-size: 1.7rem;  
   line-height: 2.0;   
